--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -8,7 +8,7 @@
     html,body{height:100%;margin:0;font-family:system-ui;background:transparent;overflow:hidden}
     .wrap{height:100%;display:flex;align-items:center;justify-content:center}
     .panel{
-      width:min(620px, 96vw);
+      width:min(520px, 96vw);
       border-radius:24px;
       border:2px solid rgba(255,255,255,.18);
       background: rgba(0,0,0,.45);
@@ -19,7 +19,7 @@
       box-shadow:0 18px 55px rgba(0,0,0,.55);
     }
     .big{font-weight:1000;letter-spacing:.6px;font-size: clamp(26px, 4.2vw, 40px);margin:0 0 8px}
-    .sub{margin:0;opacity:.92;font-size: clamp(14px, 2.1vw, 18px);line-height:1.25}
+    .sub{margin:0;opacity:.9;font-size: clamp(14px, 2.2vw, 18px);line-height:1.25}
     .stamp{margin-top:10px;font-family: ui-monospace, Menlo, Consolas, monospace;font-size: 12px;opacity:.85}
 
     @keyframes rfFlash { 0%,49%{background:#000;} 50%,100%{background:#b30000;} }
@@ -37,8 +37,8 @@
 <body>
   <div class="wrap">
     <div class="panel">
-      <div class="big" id="title"><span class="dot green"></span>GREEN FLAG</div>
-      <p class="sub" id="msg">Practice session live — join with primary driver.</p>
+      <div class="big" id="title"><span class="dot green" id="dot"></span>SERVER GOOD : ADHERE TO RACE FLAGS</div>
+      <p class="sub" id="msg">Race control : green flag (does not override yellow or blue).</p>
       <div class="stamp" id="stamp">Last update: —</div>
     </div>
   </div>
@@ -49,9 +49,8 @@
 
     const title = document.getElementById("title");
     const msg = document.getElementById("msg");
+    const dot = document.getElementById("dot");
     const stamp = document.getElementById("stamp");
-
-    let lastState = null;
 
     function fmt(ts){
       try { return new Date(ts).toLocaleTimeString([], {hour:"2-digit", minute:"2-digit", second:"2-digit"}); }
@@ -59,23 +58,31 @@
     }
 
     function apply(state, updatedAt){
+      // clear modes
       document.body.classList.remove("red","vsc");
 
       if(state === "red"){
         document.body.classList.add("red");
-        title.innerHTML = `<span class="dot red"></span>RED FLAG`;
+        dot.className = "dot red";
+        title.innerHTML = `<span class="dot red" id="dot"></span>RED FLAG`;
         msg.textContent = "Return to pits immediately. Send standings screenshot into Discord.";
-      } else if(state === "vsc_slow"){
+      }
+      else if(state === "vsc_slow"){
         document.body.classList.add("vsc");
-        title.innerHTML = `<span class="dot yellow"></span>VSC — FORMATION`;
+        dot.className = "dot yellow";
+        title.innerHTML = `<span class="dot yellow" id="dot"></span>VSC — FORMATION`;
         msg.textContent = "Remain in formation. Continue at reduced speed. No overtaking.";
-      } else if(state === "vsc_pit"){
+      }
+      else if(state === "vsc_pit"){
         document.body.classList.add("vsc");
-        title.innerHTML = `<span class="dot yellow"></span>VSC — PIT NOW`;
+        dot.className = "dot yellow";
+        title.innerHTML = `<span class="dot yellow" id="dot"></span>VSC — PIT NOW`;
         msg.textContent = "Enter pits now. Keep formation at pit exit line. No overtaking.";
-      } else {
-        title.innerHTML = `<span class="dot green"></span>GREEN FLAG`;
-        msg.textContent = "Practice session live — join with primary driver.";
+      }
+      else {
+        dot.className = "dot green";
+        title.innerHTML = `<span class="dot green" id="dot"></span>SERVER GOOD : ADHERE TO RACE FLAGS`;
+        msg.textContent = "RACE CONTROL : GREEN.";
       }
 
       stamp.textContent = "Last update: " + (updatedAt ? fmt(updatedAt) : "—");
@@ -86,17 +93,19 @@
         const res = await fetch(`${WORKER_BASE}/state?t=${Date.now()}`, { cache:"no-store" });
         if(!res.ok) throw new Error("HTTP " + res.status);
         const data = await res.json();
-        const state = (data?.state || "green").toLowerCase();
+
+        const state = String(data?.state || "green").toLowerCase();
         const updatedAt = data?.updatedAt || null;
 
-        if(state !== lastState){
-          lastState = state;
-          apply(state, updatedAt);
-        } else if(updatedAt){
-          stamp.textContent = "Last update: " + fmt(updatedAt);
-        }
+        // IMPORTANT: always apply (even if state didn’t change)
+        apply(state, updatedAt);
       }catch(e){
-        // keep last shown state
+        // show obvious offline state so you know it’s not polling
+        document.body.classList.remove("red","vsc");
+        dot.className = "dot red";
+        title.innerHTML = `<span class="dot red" id="dot"></span>FLAG FEED OFFLINE`;
+        msg.textContent = "Cannot reach Race Control state endpoint.";
+        stamp.textContent = "Last update: —";
       }
     }
 
