--- a/ifwlrc.html
+++ b/ifwlrc.html
@@ -47,6 +47,11 @@
       </button>
 
       <button class="green" id="btnGreen">GREEN FLAG</button>
+
+      <button class="green" id="btnReset">
+        SERVER RESET<br><br>
+        Practice live (15 min)
+      </button>
     </div>
 
     <div class="status" id="status">Ready.</div>
@@ -71,8 +76,10 @@
           body: JSON.stringify({ state })
         });
         const data = await res.json().catch(()=> ({}));
-        if(!res.ok) throw new Error(data?.error || `HTTP ${res.status}`);
-        statusEl.textContent = `OK — "${data.state}" @ ${new Date(data.updatedAt).toLocaleTimeString()}`;
+        if(!res.ok) throw new Error(data?.detail || data?.error || `HTTP ${res.status}`);
+
+        const shown = data.lastCommand ? data.lastCommand : data.state;
+        statusEl.textContent = `OK — "${shown}" @ ${new Date(data.updatedAt).toLocaleTimeString()}`;
       }catch(err){
         statusEl.textContent = `ERROR — ${err.message}`;
       }
@@ -82,6 +89,7 @@
     document.getElementById("btnVscSlow").addEventListener("click", ()=>setState("vsc_slow"));
     document.getElementById("btnVscPit").addEventListener("click", ()=>setState("vsc_pit"));
     document.getElementById("btnGreen").addEventListener("click", ()=>setState("green"));
+    document.getElementById("btnReset").addEventListener("click", ()=>setState("server_reset"));
   </script>
 </body>
 </html>
