--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -80,19 +80,19 @@
         document.body.classList.add("red");
         dot.className = "dot red";
         title.innerHTML = `<span class="dot red" id="dot"></span>RED FLAG`;
-        msg.textContent = "Return to pits immediately. Send standings screenshot into Discord.";
+        msg.textContent = "drive to pits immediately. Send standings screenshot into Discord.";
       }
       else if(mode === "vsc_slow"){
         document.body.classList.add("vsc");
         dot.className = "dot yellow";
         title.innerHTML = `<span class="dot yellow" id="dot"></span>VSC — FORMATION`;
-        msg.textContent = "Remain in formation. Continue at reduced speed. No overtaking.";
+        msg.textContent = "Remain in formation. 1st gear, enable limiter, no overtaking.";
       }
       else if(mode === "vsc_pit"){
         document.body.classList.add("vsc");
         dot.className = "dot yellow";
         title.innerHTML = `<span class="dot yellow" id="dot"></span>VSC — PIT NOW`;
-        msg.textContent = "Enter pits now. Keep formation at pit exit line. No overtaking.";
+        msg.textContent = "all cars to enter pits now. Keep formation at pit exit line. No overtaking.";
       }
       else if(mode === "server_reset"){
         // stays green visually, but shows reset message
