--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -98,7 +98,7 @@
         // stays green visually, but shows reset message
         dot.className = "dot green";
         title.innerHTML = `<span class="dot green" id="dot"></span>SERVER RESET`;
-        msg.textContent = "Practice session is now live. You have 15 minutes to organise re-entry to the server — good luck!";
+        msg.textContent = "Practice session is now live. You have 15 minutes to organise re-enter to the server — good luck!";
       }
       else {
         dot.className = "dot green";
