--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -103,7 +103,7 @@
       else {
         dot.className = "dot green";
         title.innerHTML = `<span class="dot green" id="dot"></span>SERVER GOOD : ADHERE TO RACE FLAGS`;
-        msg.textContent = "RACE CONTROL : GREEN.";
+        msg.textContent = "if shown after a VSC : race leader to resume race pace within 45 seconds.";
       }
 
       stamp.textContent = "Last update: " + (updatedAt ? fmt(updatedAt) : "—");
