--- a/ifwlrc.html
+++ b/ifwlrc.html
@@ -144,7 +144,7 @@
         statusEl.textContent =
           "ERROR — Missing token.\n\n" +
           "Open this page with a token in the URL hash:\n" +
-          "racecontrol.html#token=YOUR_AUTH_TOKEN";
+          "racecontrol.html#token=ifwl-redflag-2026";
         return;
       }
 
